splash screen and customer page added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,10 @@
         <item>Cosmetics</item>
         <item>Bangles</item>
         <item>Artificial jewellery</item>
-        <item>Garments</item>
+        <item>Inner Garments</item>
         <item>Purses</item>
+        <item>Gift items</item>
+        <item>Saree and bangle boxes</item>
+        <item>Perfumes</item>
     </string-array>
 </resources>
